# cellularAutomata

./: .gitignore  README.md  build-and-ghci.sh  build-and-profile.sh  build-and-run-1d.sh  build-and-run.sh  config.toml  haskell-diagrams-cellular-automata.cabal  index.html  index.xml  params.json  sitemap.xml  stack.yaml
app/: BriansBrain.hs  Cyclic1D.hs  Cyclic2D.hs  GameOfLife.hs  Heat1D.hs  Main.hs  MaterialColors.hs  Rule.hs  Seeds.hs  store.hs
css/: custom.css
images/: configs.md
src/: AbelianSandpile.hs  BriansBrain.hs  Cellular.hs  Cyclic.hs  Cyclic1D.hs  Cyclic2D.hs  DeriveMonoComonadTH.hs  GameOfLife.hs  Lib.hs  Seeds.hs  generate-static-site.sh
