name:                haskell-diagrams-cellular-automata
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-diagrams-cellular-automata#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, GameOfLife, Seeds, BriansBrain
  build-depends:       base >= 4.7 && < 5,
                       diagrams,
                       diagrams-core,
                       diagrams-lib,
                       diagrams-svg,
                       diagrams-contrib,
                       diagrams-cairo,
                       comonad,
                       colour,
                       active,
                       memoize,
                       vector,
                       vector-strategies,
                       parallel

  default-language:    Haskell2010

executable haskell-diagrams-cellular-automata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       diagrams,
                       diagrams-core,
                       diagrams-lib,
                       diagrams-svg,
                       diagrams-contrib,
                       diagrams-cairo,
                       comonad,
                       active,
                       haskell-diagrams-cellular-automata
  default-language:    Haskell2010

test-suite haskell-diagrams-cellular-automata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-diagrams-cellular-automata
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-diagrams-cellular-automata
